Cleanup CSS. Display Cordova version in addition to those of jQuery and jQuery Mobile. Add a setTimeout in an attempt to prevent contact retrieval crashes on iOS.

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -78,25 +78,6 @@ h1 {
     text-align:center;
 }
 
-.event {
-    border-radius:4px;
-    -webkit-border-radius:4px;
-    color:#FFFFFF;
-    font-size:12px;
-    margin:0px 30px;
-    padding:2px 0px;
-}
-
-.event.listening {
-    background-color:#333333;
-    display:block;
-}
-
-.event.received {
-    background-color:#4B946A;
-    display:none;
-}
-
 @keyframes fade {
     from { opacity: 1.0; }
     50% { opacity: 0.4; }
